SPlines fixed but estimations issues! To be fixed in 0.9.14 via fitted(lmer)

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -38,7 +38,7 @@ importFrom("gplots", balloonplot,
 importFrom("gtools", mixedorder, invalid)
 import("reshape2")
 import("grid")
-importFrom("splines", bs)
+importFrom("splines", ns, bs)
 import("cluster")
 
 S3method(plot, TcGSA)
