--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,11 @@
 Package: TcGSA
 Type: Package
 Title: Time-course Gene Set Analysis
-Version: 0.9.162
-Date: 2013-01-29
+Version: 0.9.2
+Date: 2013-02-18
 Author: Boris P. Hejblum
 Maintainer: Boris P. Hejblum <boris.hejblum@isped.u-bordeaux2.fr>
-Depends: R (>= 2.14), ggplot2, lme4, GSA, multtest, reshape2, grid, gtools, gplots, splines, cluster
+Depends: R (>= 2.14), ggplot2, lme4, GSA, multtest, reshape2, grid, gtools, gplots, splines, cluster, stringr
 Imports: 
 Suggests: doSNOW, Rmpi
 Description: This package implements the TcGSA workflow, an algorithm to analyze longitudinal gene-expression data at the Gene Set level.
