Getting ready for CRAN and GitHub on R 3.1.0:  - "ward.D2" argument in hclust  - renamed todos by "@TODO"  - fixing plotFit.GS coloring bug

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,14 @@
 Package: TcGSA
 Type: Package
 Title: Time-course Gene Set Analysis
-Version: 0.9.62
-Date: 2014-02-18
+Version: 0.9.7
+Date: 2014-04-27
+Authors@R: c(person("Boris P.", "Hejblum", role = c("aut", "cre"),
+		     email = "boris.hejblum@isped.u-bordeaux2.fr"))
 Author: Boris P. Hejblum
-Maintainer: Boris P. Hejblum <boris.hejblum@isped.u-bordeaux2.fr>
-Depends: R (>= 2.14), ggplot2, lme4 (>= 1.0-4), GSA, multtest, reshape2, grid, gtools, gplots, splines, cluster, stringr
-Imports: 
+Maintainer: "Boris P. Hejblum" <boris.hejblum@isped.u-bordeaux2.fr>
+Depends: R (>= 3.1), lme4 (>= 1.0-4)
+Imports: ggplot2, GSA, multtest, reshape2, gplots, cluster, stringr, splines
 Suggests: doSNOW
 Description: This package implements the TcGSA, an algorithm to analyze longitudinal gene-expression data at the gene set level.
 License: LGPL-3 | file LICENSE
