--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,14 @@
 Package: TcGSA
 Type: Package
 Title: Time-course Gene Set Analysis
-Version: 0.9.8
-Date: 2014-04-28
+Version: 0.9.9
+Date: 2014-07-09
 Authors@R: c(person("Boris P.", "Hejblum", role = c("aut", "cre"),
-		     email = "boris.hejblum@isped.u-bordeaux2.fr"))
-Author: Boris P. Hejblum [aut, cre]
+		     email = "boris.hejblum@isped.u-bordeaux2.fr"), 
+		     person("Damien", "Chimits", role = c("aut"),
+		     email = "boris.hejblum@isped.u-bordeaux2.fr")
+		    )
+Author: Boris P. Hejblum [aut, cre] and Damien Chimits [aut]
 Maintainer: Boris P. Hejblum <boris.hejblum@isped.u-bordeaux2.fr>
 Depends: R (>= 3.0.2), lme4 (>= 1.0-4)
 Imports: ggplot2, GSA, multtest, reshape2, gtools, gplots, cluster, stringr, splines, grid
