--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,7 +8,9 @@ Authors@R: c(person("Boris P.", "Hejblum", role = c("aut", "cre"),
 Author: Boris P. Hejblum [aut, cre]
 Maintainer: Boris P. Hejblum <boris.hejblum@isped.u-bordeaux2.fr>
 Depends: R (>= 3.0.2), lme4 (>= 1.0-4)
-Imports: ggplot2, GSA, multtest, reshape2, gtools, gplots, cluster, stringr, splines, grid
+Imports: ggplot2, GSA, multtest, reshape2, gtools, gplots, cluster,
+        stringr, splines, grid
 Suggests: doSNOW
 Description: This package implements the TcGSA, an algorithm to analyze longitudinal gene-expression data at the gene set level.
 License: LGPL-3 | file LICENSE
+Packaged: 2014-10-10 11:26:37 UTC; dc1
