--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,16 +2,16 @@ Package: TcGSA
 Type: Package
 Title: Time-course Gene Set Analysis
 Version: 0.9.91
-Date: 2015-03-11
+Date: 2015-04-15
 Authors@R: c(person("Boris P.", "Hejblum", role = c("aut", "cre"),
 		     email = "boris.hejblum@isped.fr"), 
 		     person("Damien", "Chimits", role = c("aut"),
 		     email = "damien.chimits@isped.fr")
 		    )
-Author: Boris P. Hejblum [aut, cre] and Damien Chimits [aut]
+Author: Boris P. Hejblum [aut, cre], Damien Chimits [aut]
 Maintainer: Boris P. Hejblum <boris.hejblum@isped.fr>
 Depends: R (>= 3.0.2), lme4 (>= 1.0-4)
 Imports: ggplot2, GSA, multtest, reshape2, gtools, gplots, cluster, stringr, splines, grid
-Suggests: doSNOW
+Suggests: foreach, parallel, doParallel
 Description: This package implements the TcGSA, an algorithm to analyze longitudinal gene-expression data at the gene set level.
 License: LGPL-3 | file LICENSE
