--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,12 +18,12 @@ export(plotSelect.GS)
 export(rmixchisq)
 export(signifLRT.TcGSA)
 import(ggplot2)
-import(gplots)
 import(reshape2)
 importFrom(GSA,GSA.read.gmt)
 importFrom(cluster,agnes)
 importFrom(cluster,clusGap)
 importFrom(cluster,maxSE)
+importFrom(gplots,heatmap.2)
 importFrom(grid,unit)
 importFrom(gtools,invalid)
 importFrom(gtools,mixedorder)
