--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,9 +7,25 @@ Authors@R: c(person("Boris P.", "Hejblum", role = c("aut", "cre"),
 		     email = "bhejblum@hsph.harvard.edu"), 
 		     person("Damien", "Chimits", role = c("aut"))
 		    )
-Depends: R (>= 3.0.2), ggplot2
-Imports: lme4 (>= 1.0-4), reshape2, GSA, multtest, gtools, cluster, stringr, splines, grid, gplots
-Suggests: foreach, parallel, doParallel
-Description: Implementation of TcGSA, an method for analyzing longitudinal gene-expression data at the gene set level.
+Depends:
+    R (>= 3.0.2),
+    ggplot2 (>= 2.0.0)
+Imports:
+    lme4 (>= 1.0-4),
+    reshape2,
+    GSA,
+    multtest,
+    gtools,
+    cluster,
+    stringr,
+    splines,
+    gplots
+Suggests:
+    foreach,
+    parallel,
+    doParallel
+Description: Implementation of TcGSA, an method for analyzing longitudinal gene-
+    expression data at the gene set level.
 License: GPL-2 | file LICENSE
 BugReports: https://github.com/borishejblum/TcGSA/issues
+RoxygenNote: 5.0.1
