--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: TcGSA
 Type: Package
 Title: Time-Course Gene Set Analysis
-Version: 0.9.94
+Version: 0.10.0
 Date: 2015-12-21
 Authors@R: c(person("Boris P.", "Hejblum", role = c("aut", "cre"),
 		     email = "bhejblum@hsph.harvard.edu"), 
@@ -24,8 +24,8 @@ Suggests:
     foreach,
     parallel,
     doParallel
-Description: Implementation of TcGSA, an method for analyzing longitudinal gene-
-    expression data at the gene set level.
+Description: Implementation of TcGSA, a method for analyzing longitudinal
+    gene-expression data at the gene set level.
 License: GPL-2 | file LICENSE
 BugReports: https://github.com/borishejblum/TcGSA/issues
 RoxygenNote: 5.0.1
