--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,10 +24,46 @@ importFrom(cluster,agnes)
 importFrom(cluster,clusGap)
 importFrom(cluster,maxSE)
 importFrom(gplots,heatmap.2)
+importFrom(grDevices,colorRampPalette)
+importFrom(grDevices,hsv)
+importFrom(grDevices,rainbow)
+importFrom(grDevices,rgb)
+importFrom(graphics,abline)
+importFrom(graphics,axis)
+importFrom(graphics,barplot)
+importFrom(graphics,hist)
+importFrom(graphics,image)
+importFrom(graphics,legend)
+importFrom(graphics,lines)
+importFrom(graphics,mtext)
+importFrom(graphics,par)
+importFrom(graphics,plot)
+importFrom(graphics,plot.new)
+importFrom(graphics,rect)
+importFrom(graphics,text)
+importFrom(graphics,title)
 importFrom(gtools,invalid)
 importFrom(gtools,mixedorder)
 importFrom(lme4,lmer)
 importFrom(multtest,mt.rawp2adjp)
 importFrom(splines,ns)
+importFrom(stats,as.dendrogram)
+importFrom(stats,as.dist)
+importFrom(stats,as.formula)
+importFrom(stats,cutree)
+importFrom(stats,density)
+importFrom(stats,deviance)
+importFrom(stats,dist)
+importFrom(stats,fitted)
+importFrom(stats,hclust)
+importFrom(stats,lm)
+importFrom(stats,median)
+importFrom(stats,order.dendrogram)
+importFrom(stats,quantile)
+importFrom(stats,rchisq)
+importFrom(stats,reorder)
+importFrom(stats,sd)
+importFrom(stats,var)
 importFrom(stringr,str_split)
 importFrom(stringr,str_trim)
+importFrom(utils,write.table)
