CRAN release v0.10.1 (accepted)
Adding imports in description file

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -19,7 +19,11 @@ Imports:
     cluster,
     stringr,
     splines,
-    gplots
+    gplots,
+    stats,
+    graphics,
+    grDevices,
+    utils
 Suggests:
     foreach,
     parallel,
