Travis CI try#6

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,7 @@
 language: R
 r: devel
-bioc_packages: "multtest"
+bioc_packages: 
+	- multtest
 repos:
   CRAN: https://cloud.r-project.org
 r_build_args: "--html"
