--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -27,7 +27,8 @@ Imports:
 Suggests:
     foreach,
     parallel,
-    doParallel
+    doParallel,
+    tcgsaseq
 Description: Implementation of TcGSA, a method for analyzing longitudinal
     gene-expression data at the gene set level.
 License: GPL-2 | file LICENSE
