changing to stable lm4 version for checking TcGSA

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,9 +16,9 @@ r_packages:
 - graphics
 - grDevices
 - utils
+- lme4
 r_github_packages:
 - hadley/ggplot2
 - hadley/stringr
-- lme4/lme4
 r_build_args: "--html"
 r_check_args: "--as-cran --timings"
