--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,10 @@
 Package: TcGSA
 Type: Package
 Title: Time-Course Gene Set Analysis
-Version: 0.10.4
+Version: 0.10.5
 Date: 2017-05-03
 Authors@R: c(person("Boris P.", "Hejblum", role = c("aut", "cre"),
-		     email = "bhejblum@hsph.harvard.edu"), 
+		     email = "boris.hejblum@u-bordeaux.fr"), 
 		     person("Damien", "Chimits", role = c("aut"))
 		    )
 Depends:
@@ -29,8 +29,7 @@ Suggests:
     parallel,
     doParallel,
     tcgsaseq
-Description: Implementation of TcGSA, a method for analyzing longitudinal
-    gene-expression data at the gene set level.
+Description: Implementation of Time-course Gene Set Analysis(TcGSA), a method for analyzing longitudinal gene-expression data at the gene set level.
 License: GPL-2 | file LICENSE
 BugReports: https://github.com/borishejblum/TcGSA/issues
 RoxygenNote: 6.0.1
