--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -28,8 +28,11 @@ Suggests:
     foreach,
     parallel,
     doParallel,
-    tcgsaseq
+    tcgsaseq,
+    knitr,
+    rmarkdown
 Description: Implementation of Time-course Gene Set Analysis (TcGSA), a method for analyzing longitudinal gene-expression data at the gene set level.
 License: GPL-2 | file LICENSE
 BugReports: https://github.com/borishejblum/TcGSA/issues
 RoxygenNote: 6.0.1
+VignetteBuilder: knitr
