added plotMultipleGS support

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(clustTrend)
 export(multtest.TcGSA)
 export(plot1GS)
 export(plotFit.GS)
+export(plotMultipleGS)
 export(plotPat.1GS)
 export(plotPat.TcGSA)
 export(plotSelect.GS)
@@ -23,6 +24,7 @@ importFrom(GSA,GSA.read.gmt)
 importFrom(cluster,agnes)
 importFrom(cluster,clusGap)
 importFrom(cluster,maxSE)
+importFrom(cowplot,plot_grid)
 importFrom(gplots,heatmap.2)
 importFrom(grDevices,colorRampPalette)
 importFrom(grDevices,hsv)
