--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: TcGSA
 Type: Package
 Title: Time-Course Gene Set Analysis
-Version: 0.10.6
-Date: 2017-10-12
+Version: 0.10.7
+Date: 2017-12-05
 Authors@R: c(person("Boris P.", "Hejblum", role = c("aut", "cre"),
 		     email = "boris.hejblum@u-bordeaux.fr"), 
 		     person("Damien", "Chimits", role = c("aut"))
@@ -15,14 +15,15 @@ Imports:
     reshape2,
     GSA,
     multtest,
-    gtools,
     cluster,
-    stringr,
-    splines,
+    cowplot,
     gplots,
-    stats,
     graphics,
     grDevices,
+    gtools,
+    stringr,
+    splines,
+    stats,
     utils
 Suggests:
     foreach,
