--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,7 +5,8 @@ Version: 0.10.7
 Date: 2017-12-05
 Authors@R: c(person("Boris P.", "Hejblum", role = c("aut", "cre"),
 		     email = "boris.hejblum@u-bordeaux.fr"), 
-		     person("Damien", "Chimits", role = c("aut"))
+		     person("Damien", "Chimits", role = c("aut")), 
+		     person("Anthony", "Devaux", role = c("aut"))
 		    )
 Depends:
     R (>= 3.0.2),
