--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -4,5 +4,7 @@
 ^appveyor\.yml$
 ^README\.Rmd$
 ^README-.*\.png$
-vignettes/*cache*
-vignettes/GSE46734
+vignettes/TcGSA_userguide_cache/*
+vignettes/TcGSA_userguide_files/*
+vignettes/GSE46734/*
+vignettes/GSE30101*
