exact asymptotic pvalue computation

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,14 +9,17 @@ S3method(summary,TcGSA)
 export(TcGSA.LR)
 export(TcGSA.LR.parallel)
 export(clustTrend)
+export(dchisqmix)
 export(multtest.TcGSA)
+export(pchisqmix)
 export(plot1GS)
 export(plotFit.GS)
 export(plotMultipleGS)
 export(plotPat.1GS)
 export(plotPat.TcGSA)
 export(plotSelect.GS)
-export(rmixchisq)
+export(qchisqmix)
+export(rchisqmix)
 export(signifLRT.TcGSA)
 import(ggplot2)
 import(reshape2)
