--- a/.travis.yml
+++ b/.travis.yml
@@ -42,6 +42,6 @@ r_github_packages:
 - hadley/ggplot2
 - hadley/stringr
 
-r_build_args: "--html"
+r_build_args: "--html --no-build-vignettes"
 
 r_check_args: "--as-cran --timings"
