removing vignettes building for TravisCI check

--- a/.travis.yml
+++ b/.travis.yml
@@ -44,4 +44,4 @@ r_github_packages:
 
 r_build_args: "--html --no-build-vignettes"
 
-r_check_args: "--as-cran --timings"
+r_check_args: "--as-cran --timings --no-build-vignettes"
