--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -1,10 +1,10 @@
 ^.*\.Rproj$
 ^\.Rproj\.user$
-.travis.yml
+^.travis.yml$
 ^appveyor\.yml$
 ^README\.Rmd$
 ^README-.*\.png$
-vignettes/TcGSA_userguide_cache/*
-vignettes/TcGSA_userguide_files/*
-vignettes/GSE46734/*
-vignettes/GSE30101*
+^vignettes/TcGSA_userguide_cache/*$
+^vignettes/TcGSA_userguide_files/*$
+^vignettes/GSE46734/*$
+^vignettes/GSE30101_family.soft.gz$
