--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -36,6 +36,7 @@ Suggests:
     rmarkdown
 Description: Implementation of Time-course Gene Set Analysis (TcGSA), a method for analyzing longitudinal gene-expression data at the gene set level.
 License: GPL-2 | file LICENSE
+Encoding: UTF-8
 BugReports: https://github.com/borishejblum/TcGSA/issues
-RoxygenNote: 6.0.1
+RoxygenNote: 6.1.0
 VignetteBuilder: knitr
