--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,11 @@
 language: R
 cache: packages
 sudo: false
+warnings_are_errors: false
 
-r: 
-- release 
-- devel
+r:
+- release
+- bioc-devel
 
 os:
 - linux
@@ -43,6 +44,9 @@ r_github_packages:
 - hadley/ggplot2
 - hadley/stringr
 
-r_build_args: "--no-build-vignettes"
+r_build_args: "--no-manual --no-resave-data"
+r_check_args: "--as-cran --no-build-vignettes --no-manual --timings"
 
-r_check_args: "--as-cran --timings"
+env:
+  global:
+	- _R_CHECK_TIMINGS_="0"
