trying bioc-devel on appveyor

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -37,7 +37,7 @@ environment:
   matrix:
     - R_VERSION: release
     
-    - R_VERSION: devel
+    - R_VERSION: bioc-devel
 
 artifacts:
   - path: '*.Rcheck\**\*.log'
