--- a/appveyor.yml
+++ b/appveyor.yml
@@ -29,8 +29,8 @@ on_failure:
 
 environment:
   global:
-	  NOT_CRAN: true
-    WARNINGS_ARE_ERRORS:
+    NOT_CRAN: true
+    #WARNINGS_ARE_ERRORS: 1
     _R_CHECK_FORCE_SUGGESTS_: 0
     R_ARCH: x64
     USE_RTOOLS: true ## to be able to use Remotes (i.e. packages from non-CRAN sources)
