--- a/appveyor.yml
+++ b/appveyor.yml
@@ -30,6 +30,7 @@ on_failure:
 environment:
   global:
     NOT_CRAN: true
+    R_BUILD_ARGS: '--no-manual --no-resave-data'
     WARNINGS_ARE_ERRORS: 1
     _R_CHECK_FORCE_SUGGESTS_: 0
     R_ARCH: x64
