--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -35,7 +35,9 @@ Suggests:
     knitr,
     GEOquery,
     rmarkdown
-Description: Implementation of Time-course Gene Set Analysis (TcGSA), a method for analyzing longitudinal gene-expression data at the gene set level.
+Description: Implementation of Time-course Gene Set Analysis (TcGSA), a method for 
+	analyzing longitudinal gene-expression data at the gene set level. Method is
+	detailed in: Hejblum, Skinner & Thiebaut (2015) <doi: 10.1371/journal.pcbi.1004310>
 License: GPL-2 | file LICENSE
 Encoding: UTF-8
 BugReports: https://github.com/borishejblum/TcGSA/issues
