--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -39,6 +39,7 @@ Description: Implementation of Time-course Gene Set Analysis (TcGSA), a method f
 	detailed in: Hejblum, Skinner & Thiebaut (2015) <doi: 10.1371/journal.pcbi.1004310>.
 License: GPL-2 | file LICENSE
 Encoding: UTF-8
-BugReports: https://github.com/borishejblum/TcGSA/issues
+BugReports: https://github.com/sistm/TcGSA/issues
 RoxygenNote: 7.1.2
 VignetteBuilder: knitr
+URL: http://sistm.github.io/TcGSA/
