--- a/.github/workflows/cran-status-checks.yaml
+++ b/.github/workflows/cran-status-checks.yaml
@@ -13,19 +13,63 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Get CRAN checks
-        uses: ricochet-rs/cran-checks/check-pkg@main
+      - uses: actions/checkout@v4
+
+      - uses: r-lib/actions/setup-pandoc@v2
+
+      - uses: r-lib/actions/setup-r-dependencies@v2
         with:
-          pkg: TcGSA
-    
-      - name: Install urlchecker
-        uses: r-lib/actions/setup-r-dependencies@v2
-        with:
-          packages: |
-            any::urlchecker
+          extra-packages: any::urlchecker, any::yyjsonr
           
       - name: URL check
         run: |
           urlchecker::url_check()
+        shell: Rscript {0}
+        
+      - name: Check CRAN checks status
+          # from https://github.com/ricochet-rs/cran-checks/blob/main/check-pkg/action.yaml
+        id: cran-check-status
+        pkg: "TcGSA"
+        run: |
+          pkg <- "${{ inputs.pkg }}"
+          fp <- paste0("https://ricochet-rs.github.io/cran-checks/", pkg, ".json")
+
+          json <- tryCatch(readLines(fp),
+            warning = function(e) {
+              stop("Package ", pkg, " not found in CRAN checks", call. = FALSE)
+            }
+          )
+
+          res <- yyjsonr::read_json_str(json)
+          
+          if (any("ERROR" %in% res$results[[1]]$check_status)) {
+            stop(
+              "Errors found in CRAN checks",
+              "\n",
+              "Review logs at ", 
+              "https://cran.r-project.org/web/checks/check_results_", pkg, ".html"
+            )
+          } else if (any(grepl("WARN", res$results[[1]]$check_status))) {
+            stop(
+              "Warnings found in CRAN checks",
+              "\n",
+              "Review logs at ", 
+              "https://cran.r-project.org/web/checks/check_results_", pkg, ".html"
+            )
+          } else if (!is.data.frame(res$issues)) {
+            issues <- res$issues[[1]]
+            stop(
+              "Additional issues detected:\n",
+              sprintf("  - %s: %s\n", issues$kind, issues$href)
+            )
+          } else if (any(grepl("NOTE", res$results[[1]]$check_status))) {
+            stop(
+              "NOTES found in CRAN checks",
+              "\n",
+              "Review logs at ", 
+              "https://cran.r-project.org/web/checks/check_results_", pkg, ".html"
+            )
+          }
+          message("\u2713 `", pkg, "` has no notes, issues, warnings or errors")
         shell: Rscript {0}
       
