--- a/.github/workflows/cran-status-checks.yaml
+++ b/.github/workflows/cran-status-checks.yaml
@@ -29,7 +29,8 @@ jobs:
       - name: Check CRAN checks status
           # from https://github.com/ricochet-rs/cran-checks/blob/main/check-pkg/action.yaml
         id: cran-check-status
-        pkg: "TcGSA"
+        with:
+          pkg: "TcGSA"
         run: |
           pkg <- "${{ inputs.pkg }}"
           fp <- paste0("https://ricochet-rs.github.io/cran-checks/", pkg, ".json")
