--- a/.github/workflows/cran-status-checks.yaml
+++ b/.github/workflows/cran-status-checks.yaml
@@ -8,9 +8,6 @@ on:
   # allows for manually running of the check
   workflow_dispatch:
 
-inputs:
-  pkg: "TcGSA"
-
 jobs:
   check_cran_status:
     runs-on: ubuntu-latest
@@ -33,7 +30,7 @@ jobs:
           # from https://github.com/ricochet-rs/cran-checks/blob/main/check-pkg/action.yaml
         id: cran-check-status
         run: |
-          pkg <- "${{ inputs.pkg }}"
+          pkg <- ""TcGSA"
           fp <- paste0("https://ricochet-rs.github.io/cran-checks/", pkg, ".json")
 
           json <- tryCatch(readLines(fp),
