--- a/.github/workflows/cran-status-checks.yaml
+++ b/.github/workflows/cran-status-checks.yaml
@@ -23,7 +23,7 @@ jobs:
 
       - uses: r-lib/actions/setup-r-dependencies@v2
         with:
-          extra-packages: any::urlchecker, any::dplyr, any::cli, any::tools
+          extra-packages: any::urlchecker, any::dplyr, any::cli
           
       - name: URL check
         run: |
